collaboration_url 관련 내용 추가

--- a/docker.env.example
+++ b/docker.env.example
@@ -19,8 +19,10 @@ REDIS_URL=redis://redis:6379
 
 # –––––––––––––––– 서비스 설정 ––––––––––––––––
 URL=https://wiki.nugabox.com
+# localhost의 PORT. 기본적으로 localhost:[PORT]로 오픈됨
 PORT=3000
-COLLABORATION_URL=http://localhost:3000
+# 실시간 협업을 위한 Socket URL (https -> wss), 없으면 URL을 읽음
+COLLABORATION_URL=https://wiki.nugabox.com
 
 # –––––––––––––––– 파일 저장소 설정 ––––––––––––––––
 FILE_STORAGE=local
